--- a/css/Style.css
+++ b/css/Style.css
@@ -36,14 +36,15 @@ li {
 	list-style: none;
 }
 
-
 /* Contenedor de Información*/
 .container-tasks {
 	position: absolute;
-	top: 50%;
+	top: 60%;
 	left: 50%;
+	height: auto;
+	width: 35%;
 	transform: translate(-50%, -50%);
-	background-color: #f2f2f2;
+	background-color: rgba(242, 242, 242, 0.808);
 	padding: 20px;
 	border-radius: 10px;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -56,8 +57,8 @@ li {
 	margin-bottom: 15px;
 }
 
-h2,
-h3 {
+
+h2,h3 {
 	margin: 10px 0;
 }
 
@@ -639,5 +640,8 @@ main .btn-send:hover {
 	grid-template-columns:  1fr;
 	justify-content: center;
 	text-align: center;
+}
 
+#hola{
+	color: rgb(0, 0, 0);
 }
