--- a/css/Style.css
+++ b/css/Style.css
@@ -670,31 +670,31 @@ main .btn-send:hover {
 .container-tasks{
 	background-color: #EEEEEE;
 }
-
-#resultados {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 20px;
-    max-width: 400px;
-    width: 100%;
-	border-radius: 50px;
-	overflow: hidden;
+.dialogo {
+	display: none;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background-color: white;
+	padding: 20px;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	background-color: white;
+  }
+  
+.dialogo input {
+	margin-right: 10px;
 }
-
-#resultados > div {
-    margin-bottom: 10px;
+  
+.dialogo button {
+margin-top: 10px;
+margin-right: 10px;
 }
-
-#resultados h4 {
-    margin: 0;
-    font-size: 18px;
-    color: #333;
-}
-
-#resultados p {
-    margin: 5px 0;
-    font-size: 16px;
-    color: #DDF2FD;
+#resultados{
+	width: 20%;
+	padding: 50px;
+	background-color: wheat;
+	display: none;
 }
